2-k3s/15.syncthing/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: syncthing
  labels:
    app: syncthing
