2-k3s/15.syncthing/service-gui.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: syncthing-gui
  namespace: syncthing
  labels:
    app: syncthing
spec:
  type: ClusterIP
  selector:
    app: syncthing
  ports:
    - name: http
      port: 8384
      targetPort: gui
