2-k3s/15.syncthing/ingressroute-tcp.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: syncthing-sync-tcp
  namespace: syncthing
spec:
  entryPoints:
    - syncthing
  routes:
    - match: HostSNI(`*`)
      services:
        - name: syncthing-sync
          port: 22000
